--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FelicaApp</string>
+    <string name="read_id">Read ID …</string>
+    <string name="reader_mode_on">Reader Mode On</string>
+    <string name="reader_mode_off">Reader Mode Off</string>
 </resources>
